--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Database</string>
+    <string name="app_name">Signup</string>
+    <string name="email_key">com.abhi.login.email</string>
+    <string name="password_key">com.abhi.login.password</string>
 </resources>
